Jumpto scroll fix, added icons to user menu and, icons/phone and address

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -481,11 +481,12 @@ footer {
                 vertical-align: bottom;
                 margin-right:10px;
               }
-              i.menu_owner_dashboard { background:transparent url(/assets/svg/user_menu.svg) no-repeat -48px center; }
-              i.menu_datasets { background:transparent url(/assets/svg/user_menu.svg) no-repeat left center; }
-              i.menu_time_series { background:transparent url(/assets/svg/user_menu.svg) no-repeat -16px center; }
-              i.menu_user_settings { background:transparent url(/assets/svg/user_menu.svg) no-repeat -32px center; }
-              i.menu_admin { background:transparent url(/assets/svg/user_menu.svg) no-repeat -48px center; }
+              i.menu_owner_dashboard { background:transparent url(/assets/svg/user_menu.svg) no-repeat left center; }
+              i.menu_datasets { background:transparent url(/assets/svg/user_menu.svg) no-repeat -16px center; }
+              i.menu_time_series { background:transparent url(/assets/svg/user_menu.svg) no-repeat -33px center; }
+              i.menu_user_settings { background:transparent url(/assets/svg/user_menu.svg) no-repeat -49px center; }
+              i.menu_admin { background:transparent url(/assets/svg/user_menu.svg) no-repeat -65px center; }              
+              i.menu_organization { background:transparent url(/assets/svg/user_menu.svg) no-repeat -81px center; }                            
             }
           }
         }
